feat: implement Shopify product synchronization with mock data support

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# just the subdomain name, without “.myshopify.com”
+SHOPIFY_SHOP=
+SHOPIFY_ACCESS_TOKEN=
+# or the version your Custom App allows
+SHOPIFY_API_VERSION=2025-07
