--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=ShopifySync
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -69,3 +69,5 @@ SHOPIFY_SHOP=
 SHOPIFY_ACCESS_TOKEN=
 # or the version your Custom App allows
 SHOPIFY_API_VERSION=2025-07
+
+CORS_ALLOWED_ORIGINS=http://localhost:5173
